--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ pandas>=2.0.0
 requests>=2.31.0
 playwright>=1.40.0
 scikit-learn>=1.3.0
-aiohttp>=3.8.0 
+aiohttp>=3.8.0
+psutil>=5.9.0
+pytz>=2023.3 
